--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.gun.loginfirebase">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
@@ -21,7 +22,8 @@
         </activity>
         <activity android:name=".SignIn" />
         <activity android:name=".NewPost" />
-        <activity android:name=".ViewPosts"></activity>
+        <activity android:name=".ViewPosts" />
+        <activity android:name=".ViewLocation"></activity>
     </application>
 
 </manifest>
